<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="lawrence.blooddonor.activities.RegistrationActivity">
	
	
	<EditText
			android:id="@+id/eFname"
			android:layout_width="368dp"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/first_name"
			android:inputType="textPersonName"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="16dp" />
	
	<EditText
			android:id="@+id/eLname"
			android:layout_width="368dp"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/last_name"
			android:inputType="textPersonName"
			android:layout_marginTop="8dp"
			android:layout_marginStart="8dp"
			app:layout_constraintTop_toBottomOf="@+id/eFname"
			android:layout_marginLeft="8dp"
			app:layout_constraintLeft_toLeftOf="parent" />
	
	<Button
			android:id="@+id/bRegister"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/register"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="11dp"
			app:layout_constraintTop_toBottomOf="@+id/sType"
			
			android:layout_marginLeft="8dp"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginRight="8dp"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintHorizontal_bias="0.489" />
	
	<Spinner
			android:id="@+id/sType"
			android:layout_width="280dp"
			android:layout_height="45dp"
			android:layout_marginEnd="8dp"
			android:layout_marginLeft="13dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="29dp"
			android:outlineProvider="background"
			android:paddingBottom="5dp"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:paddingTop="5dp"
			android:popupBackground="#DFFFFFFF"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/ePhoneNumber" />
	
	<EditText
			android:id="@+id/ePhoneNumber"
			android:layout_width="368dp"
			android:layout_height="48dp"
			android:ems="10"
			android:hint="@string/phone_number"
			android:inputType="phone"
			android:layout_marginLeft="8dp"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginRight="8dp"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="179dp"
			app:layout_constraintTop_toTopOf="parent" />
	
	<Spinner
			android:id="@+id/sGender"
			android:layout_width="280dp"
			android:layout_height="51dp"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:outlineProvider="background"
			android:paddingBottom="5dp"
			android:paddingLeft="5dp"
			
			android:paddingRight="5dp"
			android:paddingTop="5dp"
			android:popupBackground="#DFFFFFFF"
			app:layout_constraintBottom_toTopOf="@+id/ePhoneNumber"
			app:layout_constraintHorizontal_bias="0.555"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/eLname"
			tools:layout_editor_absoluteX="29dp"
			tools:layout_editor_absoluteY="125dp" />


</android.support.constraint.ConstraintLayout>